[gd_scene load_steps=18 format=3 uid="uid://be88hfg8whswb"]

[ext_resource type="Script" path="res://scene/components/board-game/board-game-info-search/board_game_info_search.gd" id="1_d0o3p"]
[ext_resource type="PackedScene" uid="uid://xn0nhcleo38w" path="res://scene/components/board-game/board_game_info.tscn" id="1_ye5co"]
[ext_resource type="Theme" uid="uid://cbq3hxgptt55t" path="res://resource/theme/main_theme.tres" id="2_7tma8"]
[ext_resource type="PackedScene" uid="uid://crc7i3to3i23b" path="res://scene/components/button/icon-button/icon-button.tscn" id="4_8lu27"]
[ext_resource type="Texture2D" uid="uid://58vkd3whymiv" path="res://asset/icon/add.svg" id="5_845rr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kcf2b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3qa0t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nfu2x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_86m2s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_46xcw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xpf7t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_buoy1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2rqst"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dvx2x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rn8xb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nugvm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4c5ia"]
bg_color = Color(0.305882, 0.65098, 0.6, 1)

[node name="BoardGameInfoSearch" type="Control"]
custom_minimum_size = Vector2(256, 200)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d0o3p")

[node name="BoardGameInfo" parent="." instance=ExtResource("1_ye5co")]
unique_name_in_owner = true
layout_mode = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_7tma8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kcf2b")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_3qa0t")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_nfu2x")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_86m2s")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_46xcw")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_xpf7t")
theme_override_styles/hover = SubResource("StyleBoxEmpty_buoy1")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_2rqst")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_dvx2x")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_rn8xb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_nugvm")

[node name="AddButton" parent="." instance=ExtResource("4_8lu27")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_bottom = 100.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" parent="AddButton" index="0"]
theme_override_styles/panel = SubResource("StyleBoxFlat_4c5ia")

[node name="MarginContainer" parent="AddButton" index="1"]
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="Icon" parent="AddButton/MarginContainer" index="0"]
texture = ExtResource("5_845rr")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="AddButton" to="." method="_on_add_button_pressed"]

[editable path="AddButton"]
